--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
 
     <div id="ReactElement_02"></div>
 
-
-    <!-- // first cdn file has the core of react code -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <!-- // Second file is useful for dom operation -->
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script type="module" src="./App.js"></script>
 </body>
-<script src="./App.js"></script>
+
 
 </html>
