--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
 </head>
 
 <body>
-    <div id="root"></div>
-
-    <div id="ReactRoot"></div>
-
-    <div id="ReactElement"></div>
-
-    <div id="ReactElement_02"></div>
+    <div id="root">Not Randered</div>
 
 <script type="module" src="./App.js"></script>
 </body>
